update logo and sidebar heading

--- a/index.html
+++ b/index.html
@@ -27,8 +27,11 @@
 		</div>
 
 		<div id="sidebar">
-			
-			<h1 id="dashboard">Dashboard</h1>
+
+			<div id="sidebar-heading">
+				<img src="land-plots.svg" alt="logo" id="logo-icon">
+				<h2 id="dashboard">Dashboard</h2>
+			</div>
 
 			<div id="sidebar-menu-top">
 
