Fixed spacing with sidebar and header

--- a/index.html
+++ b/index.html
@@ -35,31 +35,40 @@
 
 			<div id="sidebar-menu-top">
 
-		<img src="home.svg" alt="home-icon" class="icon">
-		<img src="card-account-details-outline.svg" alt="" class="icon">
-		<img src="message.svg" alt="" class="icon">
-		<img src="clock-time-eight.svg" alt="" class="icon">
-		<img src="list-box.svg" alt="" class="icon">
-		<img src="account-group.svg" alt="" class="icon">
-		<a href="">Home</a>
-		<a href="">Profile</a>
-		<a href="">Messages</a>
-		<a href="">History</a>
-		<a href="">Tasks</a>
-		<a href="">Communities</a>
-	</div>
+				<img src="home.svg" alt="home-icon" class="icon">
+				<img src="card-account-details-outline.svg" alt="" class="icon">
+				<img src="message.svg" alt="" class="icon">
+				<img src="clock-time-eight.svg" alt="" class="icon">
+				<img src="list-box.svg" alt="" class="icon">
+				<img src="account-group.svg" alt="" class="icon">
+				<a href="">Home</a>
+				<a href="">Profile</a>
+				<a href="">Messages</a>
+				<a href="">History</a>
+				<a href="">Tasks</a>
+				<a href="">Communities</a>
+			</div>
 
-	<div id="sidebar-menu-bottom">
-		<img src="cog.svg" alt="" class="icon">
-		<img src="help-box.svg" alt="" class="icon">
-		<img src="shield-lock.svg" alt="" class="icon">
-		<a href="">Settings</a>
-		<a href="">Support</a>
-		<a href="">Privacy</a>
-	</div>
+			<div id="sidebar-menu-bottom">
+				<img src="cog.svg" alt="" class="icon">
+				<img src="help-box.svg" alt="" class="icon">
+				<img src="shield-lock.svg" alt="" class="icon">
+				<a href="">Settings</a>
+				<a href="">Support</a>
+				<a href="">Privacy</a>
+			</div>
 		</div>
 
-	<!-- <div id="main-content"></div> -->
+	<div id="main-content">
+		<p id="your-projects">Your Projects</p>
+		<div class="card"></div>
+		<div class="card"></div>
+		<div class="card"></div>
+		<div class="card"></div>
+		<div class="card"></div>
+		<div class="card"></div>
+
+	</div>
 </div>
 </body>
 </html>
